--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -22,10 +22,7 @@
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
-    <link href="~/css/pmctool_gantt.css" rel="stylesheet" />
-    <link href="~/css/detalle-actividad.css" rel="stylesheet" />
-    <link href="~/css/indicadores.css" rel="stylesheet" />
-
+ 
     <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/popper.min.js" asp-append-version="true"></script>
@@ -46,7 +43,7 @@
 <body>
 
     <div class="wrapper">
-        <div class="sidebar" data-color="black">
+        <div class="sidebar" data-color="black" data-image="/images/full-screen-bg.png">
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a href="/Home/index" class="simple-text logo-mini">
@@ -129,13 +126,15 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" asp-append-version="true"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/2.3.2/moment-duration-format.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/plugins/moment.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src=""~/js/plugins/moment-duration-format.min.js" asp-append-version="true"></script>
 
-    @*<script src="~/js/plugins/moment.min.js" asp-append-version="true"></script>*@
-    <script src="~/js/plugins/sweetalert2.min.js" asp-append-version="true"></script>
+     <script src="~/js/plugins/sweetalert2.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/bootstrap-tagsinput.js" asp-append-version="true"></script>
     <script src="~/js/light-bootstrap-dashboard.js" asp-append-version="true"></script>
+    <script src="~/js/plugins/bootstrap-notify.js"></script>
+    <script src="~/js/plugins/bootstrap-selectpicker.js" type="text/javascript"></script>
+
     <script src="~/js/pmctool.js" asp-append-version="true"></script>
     <script src="~/js/helper.js" asp-append-version="true"></script>
 
