--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
@@ -726,18 +726,18 @@ input:focus {
     display: block;
 }
 
-.sidebar .nav .nav-item .nav-link {
-    color: #595959;
-    margin: 5px 15px 0px 10px;
-    opacity: .86;
-    border-radius: 4px;
-    text-transform: uppercase;
-    line-height: 30px;
-    font-size: 12px;
-    font-weight: 600;
-    padding: 10px 15px;
-    white-space: nowrap;
-}
+    .sidebar .nav .nav-item .nav-link {
+        color: #595959;
+        margin: 3px 9px 0px 5px;
+        opacity: .86;
+        border-radius: 4px;
+        text-transform: uppercase;
+        line-height: 30px;
+        font-size: 12px;
+        font-weight: 600;
+        padding: 4px 9px;
+        white-space: nowrap;
+    }
 
 .sidebar .nav .nav-item .nav-link:hover {
     background: rgba(255, 255, 255, 0.13);
@@ -753,10 +753,10 @@ input:focus {
     float: left;
 }
 
-.sidebar .nav .nav-item:not(.collapse .nav-link):hover .nav-link {
-    background: rgba(255, 255, 255, 0.13);
-    opacity: 1;
-}
+    .sidebar .nav .nav-item:not(.collapse .nav-link):hover .nav-link {
+        background: rgb(183 183 183 / 13%);
+        opacity: 1;
+    }
 
 .sidebar .nav .nav-item.active .nav-link {
     /*color: #FFFFFF;*/
