--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -6,7 +6,7 @@
                         <div class="col-md-12 pt-4">
                            <small class="font-weight-normal">Analytics</small>
                            <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                              <span> Avances de sucursales	</span>
+                              <span class="color-drackgreen"> Avances de sucursales	</span>
                            </h4>
                         </div>
                         <div class=""> 
@@ -15,66 +15,34 @@
                             <div class="col-12">
                             <div class="row"> 
                                     <div class="col-3">
-                                        <select multiple name="Estado" class="selectpicker" data-title="Estado" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                                <option value="id">Aguascalientes</option>
-                                                <option value="ms">Baja California</option>
-                                                <option value="ca"> Baja California Sur</option>
-                                                <option value="da">Campeche</option>
-                                                <option value="da">Chiapas</option>
-                                                <option value="da">Chihuahua</option>
-                                                <option value="da">Coahuila</option>
-                                                <option value="da">Colima</option>
-                                                <option value="da">Ciudad de México / Distrito Federal</option>
-                                                <option value="da">Durango</option>
-                                                <option value="da">Estado de México</option>
-                                                <option value="da">Guanajuato</option>
-                                                <option value="da">Guerrero</option>
-                                                <option value="da">Hidalgo</option>
-                                                <option value="da">Jalisco</option>
-                                                <option value="da">Michoacán</option>
-                                                <option value="da">Morelos</option>
-                                                <option value="da">Nayarit</option>
-                                                <option value="da">Nuevo León</option>
-                                                <option value="da">Oaxaca</option>
-                                                <option value="da">Puebla</option>
-                                                <option value="da">Querétaro</option>
-                                                <option value="da">Quintana Roo</option>
-                                                <option value="da">San Luis Potosí</option>
-                                                <option value="da">Sinaloa</option>
-                                                <option value="da">Sonora</option>
-                                                <option value="da">Tabasco</option>
-                                                <option value="da">Tamaulipas</option>
-                                                <option value="da">Tlaxcala</option>
-                                                <option value="da">Veracruz</option>
-                                                <option value="da">Yucatán</option>
-                                                <option value="da">Zacatecas</option>
+                                        <select name="Estate" id="Estate" class="selectpicker" data-title="Estado" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                                <option value="14">predio 1</option>
+                                                <option value="20">predio 1</option>
+        
                                         </select>
                                     </div>
                                     
                                     <div class="col-2">
-                                        <select multiple name="Municipio" class="selectpicker" data-title="Municipio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                                <option value="id">Acatic</option>
-                                                <option value="ms">La Barca</option>
-                                                <option value="ca">Chapala</option>
+                                        <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-actions-box="true"> 
                                         </select>
                                     </div>
                                     <div class="col-2">
-                                        <select multiple name="Viabilidad" class="selectpicker" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                                <option value="id">predio 1</option>
-                                                <option value="ms">predio 2</option>
-                                                <option value="ca">predio 3</option>
+                                        <select multiple name="tipopredio" class="selectpicker" id="tipopredio" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
+                                                <option value="1">MUNICIPAL</option>
+                                                <option value="2">FEDERAL</option>
+                                                <option value="3">PROPIEDAD SOCIAL</option>
                                         </select>
                                     </div>
                                     
                                     <div class="col-2">
-                                        <select multiple name="Viabilidad" class="selectpicker" data-title="Vista" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                                <option value="id">Default</option>
-                                                <option value="ms">Porcentaje</option> 
+                                        <select name="tipovista" id="tipovista" class="selectpicker" data-title="Vista" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                                <option value="default" selected>Default</option>
+                                                <option value="porcentaje">Porcentaje</option> 
                                         </select>
                                     </div>
                                     <div class="col-3 mt-1">
                                         <div class="row">
-                                            <button type="button" class="btn btn-wd btn-default btn-default" >
+                                            <button type="button" class="btn btn-wd btn-default btn-default" id="bntReport">
                                                 <span class="btn-label">
                                                     <i class="fa fa-file-alt"></i>
                                                 </span>
@@ -98,37 +66,8 @@
                                     <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
                                     <div class="toolbar"> 
                                         </div>
-                                        <div class="fresh-datatables">
-                                            <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Sucursales</th> 
-                                                        <th>Obra civil</th>
-                                                        <th>Legal</th>
-                                                        <th>Recursos Humanos</th>
-                                                        <th>Tecnología</th>
-                                                        <th>Pre prueba</th> 
-                                                    </tr>
-                                                </thead> 
-                                                <tbody>
-                                                    <tr>
-                                                        <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                         <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                     </tr>
-                                                    <tr>
-                                                        <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                         <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-check-circle fa-lg" style="color: #7f7f7f;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-minus-circle fa-lg" style="color: #ed7d31;"></i></td>
-                                                        <td class="text-center"><i class="fas fa-minus-circle fa-lg" style="color: #ed7d31;"></i></td>
-                                                     </tr>
-                                                </tbody>
-                                            </table>
+                                        <div class="_tablereport">
+                                             
                                         </div>
                                     </div>
                                 </div>
