--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -59,6 +59,13 @@
          </div>
     </div>
 </div>
+
 @section Scripts { 
-     
+<script>
+    $.notify({
+            icon: "nc-icon nc-bell-55",
+            message: "Bienvenido  <b>@userName</b> a <b>PMCTool Analytics</b>."
+
+        }, "info");
+</script>     
 }
