--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     var userImage = Context.Request.Cookies["pmctool-avatar-app"];
     var envImage = Context.Request.Cookies["pmctool-envlogo-app"];
     var lang = Context.Request.Cookies["pmctool-lang-app"];
+    var envName = Context.Request.Cookies["pmctool-name-env"];
 }
 <!DOCTYPE html>
 <html>
@@ -20,8 +21,15 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
+     @if(envName == "Analytics Environment"){ 
+         <link rel="stylesheet" href="~/css/light-bootstrap-dashboard-bambien.css" asp-append-version="true" />  
+    }
+    else{
+        <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />   
+    }
+   
+     <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/elementStatus.css" asp-append-version="true" />
  
     <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
@@ -29,7 +37,7 @@
     <script src="~/js/plugins/js.cookie.min.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/jquery.i18n.min.js" asp-append-version="true"></script>
-
+   
     @if (lang == null || lang == "es-MX")
     {
         <script src="~/lib/jquery-validate/localization/messages_es.min.js" asp-append-version="true"></script>
@@ -38,7 +46,7 @@
     else
     {
         <script src="~/js/localization/messages_us.js" asp-append-version="true"></script>
-    }
+    }  
 </head>
 <body>
 
@@ -47,10 +55,10 @@
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a href="/Home/index" class="simple-text logo-mini">
-                        <img src="~/images/1.png" alt="logo" style="height: 25px;" asp-append-version="true">
+                        <img src="~/images/1.png" alt="logo" style="height: 33px;" asp-append-version="true">
                     </a>
                     <a href="/Home/index" class="simple-text logo-normal">
-                        <img src="~/images/2.png" alt="logo" style="height: 25px;" asp-append-version="true">
+                        <img src="~/images/2.png" alt="logo" style="height: 33px;" asp-append-version="true">
                     </a>
                 </div>
                 <div class="user">
@@ -96,13 +104,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end">
                         <ul class="navbar-nav">
-                            <li class="nav-item showmodal">
-                                <a href="#" onclick="getNotifications(true); return false;" data-toggle="modal" class="nav-link">
-                                     <i class="nc-icon nc-bell-55"></i>
-                                    <span id="notificationsBadge" class=""></span>
-                                    <span class="d-lg-none">@Localizer["Notifications"]</span>
-                                </a>
-                            </li>
+                             
                             @{
                                 if (!string.IsNullOrEmpty(envImage))
                                 {
