--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -83,5 +83,11 @@
 @section Scripts {
   <script src="~/js/plugins/jquery.dataTables.min.js"></script>
 
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script> 
     <script src="~/js/core/vBranchAdvances.js"  asp-append-version="true"></script>
 }
