--- a/PMCTool.App/Views/Auth/Login.cshtml
+++ b/PMCTool.App/Views/Auth/Login.cshtml
@@ -35,7 +35,7 @@
                                     </div>
                                     <div class="form-group text-center" style="color: #9A9A9A;font-size: 13px;cursor: pointer;">
                                         <i class="nc-icon nc-key-25"></i>
-                                        <a onclick="HideAndShow('dvLogin', 'dvPassword'); return false;"> @Localizer["PasswordRecover"] </a>
+                                        @*<a onclick="HideAndShow('dvLogin', 'dvPassword'); return false;"> @Localizer["PasswordRecover"] </a>*@
                                     </div>
                                 </div>
                             </div>
