Modificaciones en ficha de proyecto

--- a/PMCTool.App/Views/FactSheet/Index.cshtml
+++ b/PMCTool.App/Views/FactSheet/Index.cshtml
@@ -15,7 +15,7 @@
                 <div class="col-md-12 pt-4">
                     <small class="font-weight-normal">Analytics</small>
                     <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                        <span> Ficha de proyectos	</span>
+                        <span class="color-drackred"> Ficha de proyectos	</span>
                     </h4>
                 </div>
             </div>
@@ -57,15 +57,15 @@
                                         <div class="row">
                                             <div class="col-4">
                                                 <div class="row">
-                                                    <h5 class="media align-items-center font-weight-bold  ml-2"><span id="projectName"></span></h5>
+                                                    <h5 class="media align-items-center font-weight-bold  ml-2"><span class="color-drackred" id="projectName"></span></h5>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col-10" style="background: #205280;color: white;margin-left: 11px;padding: 6px;">
-                                                        <h5 style="margin-bottom: 2px;margin-top: 2px;font-weight: 500;text-transform: uppercase;">Resumen ejecutivo</h5>
+                                                    <div class="col-10 headbox-factsheet">
+                                                        <h5 class="textheadbox-factsheet">Resumen ejecutivo</h5>
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col-10" style="border: 1px solid #a5a5a5;border-radius: 2px;margin-left: 11px;">
+                                                    <div class="col-10 borderbox-factsheet">
                                                         <p style="line-height: 1;">
                                                             <em style="font-size: 11px;" id="resumenEjecutivo">
 
@@ -74,12 +74,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="row mt-3">
-                                                    <div class="col-10" style="background: #205280;color: white;margin-left: 11px;padding: 6px;">
-                                                        <h5 style="margin-bottom: 2px;margin-top: 2px;font-weight: 500;text-transform: uppercase;">Decisiones clave</h5>
+                                                    <div class="col-10 headbox-factsheet">
+                                                        <h5 class="textheadbox-factsheet">Decisiones clave</h5>
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col-10" style="border: 1px solid #a5a5a5;border-radius: 2px;margin-left: 11px;">
+                                                    <div class="col-10 borderbox-factsheet">
                                                         <p style="line-height: 1;">
                                                             <em style="font-size: 11px;" id="DesicionesClave">
 
@@ -119,7 +119,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <table class="table table-hover" style="border: 1px solid #a5a5a5;">
+                                                        <table id="tFactSheet" class="table table-hover">
                                                             <thead>
                                                                 <tr>
                                                                     <th>Etapas</th>
@@ -146,5 +146,8 @@
 @section Scripts {
     <script src="~/js/plugins/bootstrap-selectpicker.js" asp-append-version="true"></script>
     <script src="~/js/core/vFactSheet.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+                saveUrl('@AppSettings.Current.UrlPMCTool');
+    </script>
 }
 
