Ubicación de sucursales

--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -39,7 +39,7 @@
                                 </select>
                             </div>
                             <div class="col-3">
-                                <select multiple name="Viabilidad" class="selectpicker" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                <select multiple id="predio" name="predio" class="selectpicker" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                     <option value="FEDERAL">FEDERAL</option>
                                     <option value="MUNICIPAL">MUNICIPAL</option>
                                     <option value="PARTICULAR">PARTICULAR</option>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-3">
+                <div class="row justify-content-center mt-3 div-map">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body ">
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center div-table">
                     <div class="col-12">
                         <div class="card data-tables">
                             <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
@@ -96,227 +96,7 @@
                                                 <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Avance</th>
                                             </tr>
                                         </tfoot>-->
-                                        <tbody>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="http://doc.pmc-tool.mx/PMCAnalytics/ficha_proyectos.php">Nombre de sucursal</a></td>
-                                                <td>Jalisco</td>
-                                                <td>Chapala</td>
-                                                <td>Chapala</td>
-                                                <td><span style="background: #19b319; font-weight: 600;">En tiempo</span></td>
-                                                <td>
-                                                    58%
-                                                </td>
-                                            </tr>
+                                        <tbody id="dataTable">
                                         </tbody>
                                     </table>
                                 </div>
