--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -12,30 +12,29 @@
                 <div class="col-md-12 pt-4">
                     <small class="font-weight-normal">Analytics</small>
                     <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
-                        <span class="txt-blue"> Ubicación de sucursales	</span>
+                        <span class="color-drackred"> Ubicación de sucursales	</span>
                     </h4>
                 </div>
                 <div class="row justify-content-center mt-3">
                     <div class="col-12">
                         <div class="row">
                             <!--<div class="col-2">
-                                <select multiple name="Región" class="selectpicker" data-title="Región" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                        <option value="Noroeste">Noroeste</option>
-                                        <option value="Noreste">Noreste</option>
-                                        <option value="Chapala">Chapala</option>
-                                        <option value="Oriente">Oriente</option>
-                                        <option value="Centronorte">Centronorte</option>
-                                        <option value="Centrosur">Centrosur</option>
-                                        <option value="Suroeste">Suroeste</option>
-                                        <option value="Sureste">Sureste</option>
-                                </select>
-                            </div> -->
+                    <select multiple name="Región" class="selectpicker" data-title="Región" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
+                            <option value="Noroeste">Noroeste</option>
+                            <option value="Noreste">Noreste</option>
+                            <option value="Chapala">Chapala</option>
+                            <option value="Oriente">Oriente</option>
+                            <option value="Centronorte">Centronorte</option>
+                            <option value="Centrosur">Centrosur</option>
+                            <option value="Suroeste">Suroeste</option>
+                            <option value="Sureste">Sureste</option>
+                    </select>
+                </div> -->
                             <div class="col-3">
-                                @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style= "btn-default btn-outline", @data_title="Estados" })
+                                @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style = "btn-default btn-outline", @data_title = "Estados" })
                             </div>
                             <div class="col-3">
                                 <select multiple id="Municipios" name="Municipio" class="selectpicker" data-title="Municipios" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
-                                   
                                 </select>
                             </div>
                             <div class="col-3">
@@ -47,15 +46,31 @@
 
                                 </select>
                             </div>
-                            <div class="col-2 mt-1">
+                            <div class="col-3 mt-1">
+                                <div class="row">
+
+                                </div>
                                 <button type="button" id="btnReporte" class="btn btn-wd btn-default btn-default">
                                     <span class="btn-label">
                                         <i class="fa fa-file-alt"></i>
                                     </span>
                                     Mostrar Reporte
                                 </button>
+                                <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1">
+                                    <span class="btn-label">
+                                        <i class="fas fa-times"></i>
+                                    </span>
+                                    Cerrar Reporte
+                                </button>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mt-4">
+                    <div class="col-md-12 text-right text-right">
+                        <button class="btn btn-social btn-tumblr btn-link" id="bntReportPDF">
+                            <i class="fas fa-file-pdf"></i> Exportar en PDF
+                        </button>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-3 div-map">
@@ -78,24 +93,14 @@
                                     <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
                                         <thead>
                                             <tr>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Sucursales</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Estado</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Municipio</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Localidad</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Estatus</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Avance</th>
+                                                <th >Sucursales</th>
+                                                <th >Estado</th>
+                                                <th >Municipio</th>
+                                                <th >Localidad</th>
+                                                <th >Estatus</th>
+                                                <th >Avance</th>
                                             </tr>
                                         </thead>
-                                        <!--<tfoot>
-                                            <tr>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Sucursales</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Estado</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Región</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Viabilidad</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Estatus</th>
-                                                <th style="background: #205180;color: white;font-size: 0.8em;font-weight: bold;">Avance</th>
-                                            </tr>
-                                        </tfoot>-->
                                         <tbody id="dataTable">
                                         </tbody>
                                     </table>
