--- a/PMCTool.App/Views/Auth/Login.cshtml
+++ b/PMCTool.App/Views/Auth/Login.cshtml
@@ -34,7 +34,7 @@
                                         <input type="password" placeholder="@Localizer["PasswordEnter"]" class="form-control" id="password" name="password" minlength="8" maxlength="15" required>
                                     </div>
                                     <div class="form-group text-center" style="color: #9A9A9A;font-size: 13px;cursor: pointer;">
-                                        <i class="nc-icon nc-key-25"></i>
+                                        @*<i class="nc-icon nc-key-25"></i>*@
                                         @*<a onclick="HideAndShow('dvLogin', 'dvPassword'); return false;"> @Localizer["PasswordRecover"] </a>*@
                                     </div>
                                 </div>
