--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using PMCTool.App.Helpers.Html;
 @{
     var userName = Context.Request.Cookies["pmctool-name-app"];
+        var envName = Context.Request.Cookies["pmctool-name-env"];
+
 }
 @Html.Hidden("Loading", Localizer["Loading"].ToString())
 @Html.Hidden("January", Localizer["January"].ToString())
@@ -53,7 +55,12 @@
         <div class="row"> 
                     <div class="container-fluid pl-0 ml-0">
                       <center> 
-                       <img src="/images/banbien.png">
+                          @if(envName == "Analytics Environment"){ 
+                                 <img src="/images/banbien.png">
+                            }
+                            else{
+                             }
+                       
                       </center>
                     </div> 
          </div>
